Adds checkstyle and Github Actions
Signed-off-by: Laird Nelson <laird.nelson@oracle.com>